--- a/NetStandardClassLib/NetStandardClassLib.csproj
+++ b/NetStandardClassLib/NetStandardClassLib.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461;</TargetFrameworks>
-    <!--<TargetFramework>netstandard2.0</TargetFramework>-->
+    <!--<TargetFrameworks>netstandard2.0;net461;</TargetFrameworks>-->
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
